try resolve 404 error by letting React chose Routes

--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -2,6 +2,10 @@
     "mimeTypes": {
       ".ts": "application/javascript",
       ".tsx": "application/javascript"
+    },
+    "navigationFallback": {
+        "rewrite": "/index.html"
+      
     }
 }
   
